k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: augsburg-picks-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: augsburg-picks-backend
  template:
    metadata:
      labels:
        app: augsburg-picks-backend
    spec:
      containers:
        - name: augsburg-picks-backend
          image: rasooltalha/augsburg-picks-backend:latest
          ports:
            - containerPort: 5001
