k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: augsburg-picks-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001

  type: NodePort
