k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: talha-rasool-dev
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
