k8s/backend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  namespace: talha-rasool-dev
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 5001
  tls:
    termination: edge
