k8s/frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: talha-rasool-dev
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 3000
  tls:
    termination: edge
